<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_brand_label" />

            <Spinner
                android:id="@+id/entry_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_color_label" />

            <RadioGroup
                android:id="@+id/entry_car_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/entry_car_color_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_color_black"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/entry_car_color_silver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_color_silver"

                    />

                <RadioButton
                    android:id="@+id/entry_car_color_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_color_green"

                    />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_year_label" />

            <EditText
                android:id="@+id/entry_car_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_car_type_label" />

            <Spinner
                android:id="@+id/entry_car_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_car_defects_label" />

            <CheckBox
                android:id="@+id/entry_car_defects_damaged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_car_defects_damaged" />

            <CheckBox
                android:id="@+id/entry_car_defects_scratched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_car_defects_scratched"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/entry_car_defects_drowned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_car_defects_drowned" />

            <Button
                android:id="@+id/entry_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_submit_label" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>