<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.byethost4.itisarndwebsite.elitelistapp.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorAccent"
        android:src="@mipmap/ic_launcher"
        android:textAlignment="center" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/register_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"
        android:textSize="18dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/login_user_name" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:text="@string/register_button"        />



</LinearLayout>
