<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorAccent"
        android:src="@mipmap/ic_launcher"
        android:textAlignment="center" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"
        android:textSize="20dp" />

    <!--

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Taip"
         />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Taip"
        />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="56dp"
        android:layout_height="32dp"
        android:text="Ne" />
        -->
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/login_user_name" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <CheckBox
        android:id="@+id/login_remember_me"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_checkbox"
        android:background="#FFF"
        android:textColor="#fc0000" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:text="@string/login_button"        />
    <!-- Button's for simple and custom Toast -->


    <!--<Button
        android:id="@+id/customToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="#0f0"
        android:text="Custom Toast"
        android:textColor="#fff"
        android:textSize="20sp" />-->
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
    android:id="@+id/register_button"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:textColor="#fff"
    android:text="@string/register_button"        />



</LinearLayout>
